<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_container">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary_container"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/title_alunos"
            app:titleTextColor="@color/on_primary_container" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/studentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:id="@+id/semAlunosTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sem_alunos"
        android:textSize="18sp"
        android:textColor="@color/on_surface"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/adicionarAlunoFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/button_adicionar_aluno"
        android:textColor="@color/on_primary"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/on_primary"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>